[gd_scene load_steps=11 format=3 uid="uid://cj3b5o02mbmbq"]

[ext_resource type="Script" path="res://main.gd" id="1_f8fjj"]
[ext_resource type="PackedScene" uid="uid://wu5wq74iwpu7" path="res://player.tscn" id="2_awrxc"]
[ext_resource type="Texture2D" uid="uid://quej32dnhmh1" path="res://assets/mini_pixel_pack_3/Space_BG (2 frames) (64 x 64).png" id="2_lxg2y"]
[ext_resource type="PackedScene" uid="uid://cuus2lgqr0svr" path="res://ui.tscn" id="4_xtkop"]
[ext_resource type="Texture2D" uid="uid://c30hj538rqbd2" path="res://assets/mini_pixel_pack_3/UI objects/START (48 x 8).png" id="5_4ust6"]
[ext_resource type="Texture2D" uid="uid://chup6k055u03a" path="res://assets/mini_pixel_pack_3/UI objects/GAME_OVER (72 x 8).png" id="6_hawga"]
[ext_resource type="Script" path="res://pause_menu.gd" id="7_0edch"]

[sub_resource type="Animation" id="Animation_prj03"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 240, 320)]
}

[sub_resource type="Animation" id="Animation_bl7kr"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 320), Rect2(0, -64, 240, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfwta"]
_data = {
"RESET": SubResource("Animation_prj03"),
"scroll": SubResource("Animation_bl7kr")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_f8fjj")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_lxg2y")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 240, 320)

[node name="Player" parent="." instance=ExtResource("2_awrxc")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scroll"
libraries = {
"": SubResource("AnimationLibrary_jfwta")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="UI" parent="CanvasLayer" instance=ExtResource("4_xtkop")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
custom_minimum_size = Vector2(240, 320)
layout_mode = 2
texture_normal = ExtResource("5_4ust6")
stretch_mode = 3

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("6_hawga")

[node name="PauseMenu" type="MarginContainer" parent="CanvasLayer"]
process_mode = 3
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_0edch")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(0, 27)

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="." method="_on_player_shield_changed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="_on_start_pressed"]
